# ChangeLog for net-irc/hexchat
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/hexchat/ChangeLog,v 1.68 2013/08/26 12:31:34 hasufell Exp $

*hexchat-9999 (26 Aug 2013)

  26 Aug 2013; Julian Ospald <hasufell@gentoo.org> +hexchat-9999.ebuild:
  add live ebuild

  25 Jul 2013; Manuel Rüger <mrueg@gentoo.org> metadata.xml:
  Update name in metadata.xml as requested by Denis M. (Phr33d0m)

  11 Jul 2013; Julian Ospald <hasufell@gentoo.org> hexchat-2.9.5.ebuild,
  hexchat-2.9.5-r1.ebuild, hexchat-2.9.5_p20130525.ebuild:
  update homepage

  08 Jul 2013; Julian Ospald <hasufell@gentoo.org> -hexchat-2.9.3.ebuild,
  -files/hexchat-2.9.3-cflags.patch, -files/hexchat-2.9.3-nogtk.patch,
  -hexchat-2.9.4.ebuild, -hexchat-2.9.4-r2.ebuild,
  -files/hexchat-2.9.4-build.patch:
  remove old

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> hexchat-2.9.5-r1.ebuild:
  Stable for ia64, wrt bug #474434

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> hexchat-2.9.5-r1.ebuild:
  Stable for ppc64, wrt bug #474434

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> hexchat-2.9.5-r1.ebuild:
  Stable for ppc, wrt bug #474434

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> hexchat-2.9.5-r1.ebuild:
  Stable for sparc, wrt bug #474434

  27 Jun 2013; Julian Ospald <hasufell@gentoo.org>
  hexchat-2.9.5_p20130525.ebuild:
  improve elog

  26 Jun 2013; Sergey Popov <pinkbyte@gentoo.org>
  hexchat-2.9.5_p20130525.ebuild:
  Add epatch_user in src_prepare

  26 Jun 2013; Jeroen Roovers <jer@gentoo.org> hexchat-2.9.5-r1.ebuild:
  Stable for HPPA (bug #474434).

  26 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> hexchat-2.9.5-r1.ebuild:
  Stable on arm, wrt bug #474434

  24 Jun 2013; Julian Ospald <hasufell@gentoo.org> hexchat-2.9.5.ebuild,
  hexchat-2.9.5-r1.ebuild, hexchat-2.9.5_p20130525.ebuild,
  +files/hexchat-2.9.5-autoconf-missing-macros.patch:
  fix autoconf when gtk+:2 is not installed wrt #474582
