@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
-DEPEND=dev-libs/glib:2 dbus? ( >=dev-libs/dbus-glib-0.98 ) fastscroll? ( x11-libs/libXft ) gtk? ( x11-libs/gtk+:2 ) libcanberra? ( media-libs/libcanberra ) libproxy? ( net-libs/libproxy ) libnotify? ( x11-libs/libnotify ) nls? ( virtual/libintl ) ntlm? ( net-libs/libntlm ) perl? ( >=dev-lang/perl-5.8.0 ) plugin-sysinfo? ( sys-apps/pciutils ) python? ( python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) spell? ( app-text/enchant dev-libs/libxml2 ) ssl? ( >=dev-libs/openssl-0.9.8u ) theme-manager? ( dev-lang/mono ) virtual/pkgconfig nls? ( sys-devel/gettext ) theme-manager? ( dev-util/monodevelop ) || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool >=sys-apps/sed-4 dev-vcs/git
+DEPEND=dev-libs/glib:2 dbus? ( >=dev-libs/dbus-glib-0.98 ) fastscroll? ( x11-libs/libXft ) gtk? ( x11-libs/gtk+:2 ) libcanberra? ( media-libs/libcanberra ) libproxy? ( net-libs/libproxy ) libnotify? ( x11-libs/libnotify ) nls? ( virtual/libintl ) ntlm? ( net-libs/libntlm ) perl? ( >=dev-lang/perl-5.8.0 ) plugin-sysinfo? ( sys-apps/pciutils ) python? ( python_single_target_python2_7? ( dev-lang/python:2.7 ) python_single_target_python3_3? ( dev-lang/python:3.3 ) dev-python/python-exec[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?] ) spell? ( app-text/enchant gtkspell? ( app-text/gtkspell:2 ) sexy? ( x11-libs/libsexy ) !gtkspell? ( !sexy? ( dev-libs/libxml2 ) ) ) ssl? ( >=dev-libs/openssl-0.9.8u ) theme-manager? ( dev-lang/mono ) virtual/pkgconfig nls? ( sys-devel/gettext ) theme-manager? ( dev-util/monodevelop ) || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool >=sys-apps/sed-4 dev-vcs/git
 DESCRIPTION=Graphical IRC client based on XChat
 EAPI=5
 HOMEPAGE=http://hexchat.github.io/
-IUSE=dbus fastscroll +gtk ipv6 libcanberra libnotify libproxy nls ntlm perl +plugins plugin-checksum plugin-doat plugin-fishlim plugin-sysinfo python spell ssl theme-manager python_targets_python2_6 python_targets_python2_7 python_single_target_python2_6 python_single_target_python2_7
+IUSE=dbus fastscroll +gtk gtkspell ipv6 libcanberra libnotify libproxy nls ntlm perl +plugins plugin-checksum plugin-doat plugin-fishlim plugin-sysinfo python sexy spell ssl theme-manager python_targets_python2_7 python_targets_python3_3 python_single_target_python2_7 python_single_target_python3_3
 LICENSE=GPL-2
-RDEPEND=dev-libs/glib:2 dbus? ( >=dev-libs/dbus-glib-0.98 ) fastscroll? ( x11-libs/libXft ) gtk? ( x11-libs/gtk+:2 ) libcanberra? ( media-libs/libcanberra ) libproxy? ( net-libs/libproxy ) libnotify? ( x11-libs/libnotify ) nls? ( virtual/libintl ) ntlm? ( net-libs/libntlm ) perl? ( >=dev-lang/perl-5.8.0 ) plugin-sysinfo? ( sys-apps/pciutils ) python? ( python_single_target_python2_6? ( dev-lang/python:2.6 ) python_single_target_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_6(-)?,python_targets_python2_7(-)?,python_single_target_python2_6(+)?,python_single_target_python2_7(+)?] ) spell? ( app-text/enchant dev-libs/libxml2 ) ssl? ( >=dev-libs/openssl-0.9.8u ) theme-manager? ( dev-lang/mono )
-REQUIRED_USE=plugin-checksum? ( plugins ) plugin-doat? ( plugins ) plugin-fishlim? ( plugins ) plugin-sysinfo? ( plugins ) python? ( python_single_target_python2_6? ( python_targets_python2_6 ) python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_6 python_single_target_python2_7 ) )
+RDEPEND=dev-libs/glib:2 dbus? ( >=dev-libs/dbus-glib-0.98 ) fastscroll? ( x11-libs/libXft ) gtk? ( x11-libs/gtk+:2 ) libcanberra? ( media-libs/libcanberra ) libproxy? ( net-libs/libproxy ) libnotify? ( x11-libs/libnotify ) nls? ( virtual/libintl ) ntlm? ( net-libs/libntlm ) perl? ( >=dev-lang/perl-5.8.0 ) plugin-sysinfo? ( sys-apps/pciutils ) python? ( python_single_target_python2_7? ( dev-lang/python:2.7 ) python_single_target_python3_3? ( dev-lang/python:3.3 ) dev-python/python-exec[python_targets_python2_7(-)?,python_targets_python3_3(-)?,python_single_target_python2_7(+)?,python_single_target_python3_3(+)?] ) spell? ( app-text/enchant gtkspell? ( app-text/gtkspell:2 ) sexy? ( x11-libs/libsexy ) !gtkspell? ( !sexy? ( dev-libs/libxml2 ) ) ) ssl? ( >=dev-libs/openssl-0.9.8u ) theme-manager? ( dev-lang/mono )
+REQUIRED_USE=gtkspell? ( spell ) plugin-checksum? ( plugins ) plugin-doat? ( plugins ) plugin-fishlim? ( plugins ) plugin-sysinfo? ( plugins ) python? ( python_single_target_python2_7? ( python_targets_python2_7 ) python_single_target_python3_3? ( python_targets_python3_3 ) ^^ ( python_single_target_python2_7 python_single_target_python3_3 ) ) sexy? ( spell ) ?? ( gtkspell sexy )
 SLOT=0
-_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	git-2	e92e09651292b1bef5656592364550f7	gnome2-utils	794d2847b4af390a1e020924876c8297	libtool	b1c8688e60f9580bcb9bb46e08737eb1	mono-env	59ca1177366cc9e14521d3501e9bb281	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c0720ccef1b207f670c67319d9eefba1
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	git-2	e92e09651292b1bef5656592364550f7	gnome2-utils	794d2847b4af390a1e020924876c8297	libtool	b1c8688e60f9580bcb9bb46e08737eb1	mono-env	59ca1177366cc9e14521d3501e9bb281	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	e3288ba49a9a4406c283001e4d284aad	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=722e3b83740002af90177c911e7a3d5f
