@@ -12,17 +12,17 @@ DIST hexchat-2.9.5_p20130525.tar.xz 1223400 SHA256 26591e56153d2d254ff28740fe7ec
 EBUILD hexchat-2.9.5-r1.ebuild 3997 SHA256 80ca41434b24d7479cdd8941851563c86378497ce75a97bae2fdea579c905b18 SHA512 193769260b499f8070bed9e27e082052b622b33a22bba530d7efb7676f4db76328938c983274f4d019697b04beceb6e129888643356d06dbff0b9fabd71e0ee0 WHIRLPOOL e123e327d5a99e4d5073df4ae6e9f0f38b8f44506729e6a048ee46aec133d1e20a4d19129390a282b55c3e0736464fdc808019de6d4ec7fb5ae3ac37852b5c2a
 EBUILD hexchat-2.9.5.ebuild 3933 SHA256 4bb54d91aa5659548b26e41321cffd3a3964f95191a875ff9314cfa01fb73e90 SHA512 0c175eb96bd7c149698404e20b69a90a91c13d2b4018ef8821ab4b979e0d307ebab4331e6d3533b7840798f127f08b63cc3ac8771b1a016a1f6b888b08c7291b WHIRLPOOL fe5b74f9a5d3f58b7690ff46cf9d900db53f4621b535e919e4833eb2efe7352b84ce96d3becf7c27f272c58dee38a75a6fadba731f431f2054a42e5358eff33a
 EBUILD hexchat-2.9.5_p20130525.ebuild 4366 SHA256 acd783b5a20abd7209de9ce24cb7b2a5c81885f3797f01bce42f53f2c5753ec6 SHA512 03fb035838f27039b61f7edbc96975be1fb6980667c1852441d803d4a2d889e98b0e89794cdd6717385955f4568675f3b67fa0a5891b77f622808614b1574453 WHIRLPOOL 710219dc266b0be44d0920053bb8be0663335127d1f9ad403ca2f846d644eeeff2fb941b223322cae49d9381a41367e595f65fac3f84ca4e67ad5aa39d3de6a3
-EBUILD hexchat-9999.ebuild 4283 SHA256 d07973e815d8fc4dfd0020487ca036a17acc8cad08cfe80d61324f455e032d3b SHA512 c5a3fea347c4faf9ea1c619ffbad6f3e2c0c37088253f8a24d264e082ee9cb8e4e3e18f80f39552b781459390d610bcea3a9e302a34d7834faf4a83971bffad2 WHIRLPOOL 9a3b58f58714f4b7ad251c267016718290233fc0cca0283b9b79ed685dd2cd341285aa2d46178978a59f7b4b732665cf54410d1d40e96959a872b42f5fb68b97
-MISC ChangeLog 9333 SHA256 a005ba317d3a8081785de8c8b286fbb1a1be3e1e5bd37a7f32b27ed50986d999 SHA512 c72d052ecff32148d7f2930362ec52e55bc28cf9167670196de3630e592d688872a0dc08c1e11f78862f79d23b2ab9869a329bb1c193c2ed88186cf367fc0af8 WHIRLPOOL af8032c37b215f0cd4791733d801e5d1424d2c3ee7da205a38b631cb33dcb34f309f0198ba285f3ae0bd6efc7b57b83616572ceec3db2ab10750983f1afe423c
-MISC metadata.xml 1595 SHA256 3367f8f3d834ad0def4b26a2799e59aa5550ff0b0cb7cf89582cab767c73c7a7 SHA512 d9b53fa643853b84753652ae5cfef5e7cf924f45288881bfaa9c97d3fe3ff7d3a0a01618da8f50f243480ee36480a9ab9e115eb4b7e1a1c53f0881c941005d7e WHIRLPOOL f697ae58ea05e2a5106082e52af7d803b562cb173f4804b51496fb84241e76b28417445c361acb6a0f743bc13f9cdb81a588c5b98ce94253f82575b481f8bfbb
+EBUILD hexchat-9999.ebuild 5050 SHA256 f55ecd21557fb82ee2995e3cb81ca7737f24363660529d42eb8ed2f7d897b028 SHA512 97ba91c02adf385dabcb0e3afe5ec64321e2450d6442747328964c90676c6e7919dbb917acc4a7cf2282ca1f9e7ea802719626917441210ae43bd22be4fb18f1 WHIRLPOOL 195d9187a91be3c8493278740b7dc836c185c5d70d492b68b610305c8946d960fb2d6d50116bbb223bac451c5ffac2366bd84799efd3b9aa109c170d2bb261f6
+MISC ChangeLog 9443 SHA256 c236b57411fa9ac2113052f09f854baf67fed426ea794a983158919635c32daf SHA512 e0177a1648f1740e491c9a11a285f76a3a3b38e351e63a3a5355a66a869b6f327097a5223280a54a2fbd3c80acc5454d441f9f42a1d0ea04fdfe962d1cb5a4fd WHIRLPOOL f9f9f443373697f5e7e279371d5c1170653f9ec83d5d407139f3834e1598336347409102390e76b393c553677094306a56859a9c5a0710d61c1c8dfe62bbdb02
+MISC metadata.xml 1857 SHA256 bd8a041c30ade7b290d349fc58ee71943e3441a1fe9e67931bc184de24c14e22 SHA512 5159b41ff8b1ee416c34bf73ea0270b304ec1e65519a41d794e12492a0ddd4cc07fca6ce83827c49e50746393c552485ef39ce5992081108127f9e6311505c7f WHIRLPOOL 442064cee2f98013d3b2d7b1f3f326592202872326d2ef6b2380b5e3906ac7db89b3f29fe062c1045a39b18db628505405cf84a777d67ba733b88076139dea4e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSG0qrAAoJEFpvPKfnPDWzo5gH/1wkQABiEHyc+ASdsol7mqba
-iY48rcmDEGO9tWHp5rq5NZaGium/Tp1KrlICtjln/RVR32vCP36B6DiY+kudj7JQ
-5+b3p2zAVH9QKASWk4rZ2M6WWLJasf/MivvtPFtVgmTS3IwfFpLlxRT5erhO4Pm5
-HTNgAEu9F895xD3Cejr57JPzXPBqIMmFzwoniVF8/Icr7WsAnZDuD+wy7rvvcoVN
-0fZU6khDQ7zQ7qyHNuWWyFPlUUxVJqHz+c5kTWa09t926U0HVPQh7PvE3F/K8vf1
-l3ppMBfINxnrWqP3O9+yrj/mdZMQJ9B8lGX+5ARm1DwcnO9U5uMu7Fn5x0f10Ak=
-=laXJ
+iQEcBAEBCAAGBQJSHHFYAAoJEFpvPKfnPDWzDdsIAKfvmwyCcpQ2il5Mt8amQ1zl
+ghLIECMQKIGgtDi6uP8Zg2PXLoB2keadIuUaMdIt3lHJxQSB26+T966ocWxCAzvY
+RHdCWEf3gdipzk+V2wJ5W4pUR0LO+DrIG4Qe2CHgNRfyNH4GIDpGQq+io+Op/HWa
+/R2GOXvZ2LO++4pJaJiUCtFCr4KKiXYOFLkDBB+utn78MeSJ3j9wrOl2+G4I40ET
+Vyi3SjPfVRWgWNlB5mhCQgfBvXbsuYe17O7cgglHtHw5DuAkeOuP+X93dgBzy1YH
+ZTEfsugdhnLZuYH6/jv2f+TZcuQMQXrD9NIBor2m6PpA67LxBgVQYeMQU1PzhcY=
+=eBmk
 -----END PGP SIGNATURE-----
